[gd_scene load_steps=2 format=3 uid="uid://ccac234rdkkxg"]

[ext_resource type="Script" uid="uid://bh1plp0ylf8wp" path="res://Scenes/UI/CardsUI/card_inspect.gd" id="1_wmshd"]

[node name="Control" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wmshd")

[node name="CardContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(562.5, 900)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CardContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CardContainer/VBoxContainer"]
layout_mode = 2

[node name="EnergyCost" type="Label" parent="CardContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "1"

[node name="CardName" type="Label" parent="CardContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 50
text = "Attack"

[node name="CardImage" type="TextureRect" parent="CardContainer/VBoxContainer"]
custom_minimum_size = Vector2(450, 420)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CardDescription" type="RichTextLabel" parent="CardContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
fit_content = true
scroll_active = false
horizontal_alignment = 1
meta_underlined = false
hint_underlined = false

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="gui_input" from="CardContainer" to="." method="_on_card_container_gui_input"]
